--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -1,13 +1,13 @@
 // COLORS
-$primary-color: #02aab0;
-$secondary-color: #00cdac;
+$primary-color: #000046;
+$secondary-color: #1cb5e0;
 
 // $primary-color: #7f449d;
 // $secondary-color: #793fc1;
 
-$white-color: #fff;
+$white-color: #d4c9d8;
 
-$dark-grey: #333333;
+$dark-grey: #131212;
 
 $dark-blue-text: #272341; // For Headings
 
