--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -1,15 +1,16 @@
 // COLORS
-$primary-color: #000046;
-$secondary-color: #1cb5e0;
+$primary-color: #410c55;
+$secondary-color: #cbb4d4;
 
 // $primary-color: #7f449d;
 // $secondary-color: #793fc1;
 
 $white-color: #d4c9d8;
+$black-color: #160e22;
 
-$dark-grey: #131212;
+$dark-grey: #333333;
 
-$dark-blue-text: #272341; // For Headings
+$dark-blue-text: #d4c9d8; // For Headings
 
 // FONT SIZE
 $default-font-size: 1.6rem;
